--- a/index.html
+++ b/index.html
@@ -1,1 +1,93 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body>
+    <table>
+        <!-- how to add borders?? (its added in CSS ig)-->
+        <caption>Student Data</caption>
+        <col class="studentName" />
+        <colgroup id="studentColumns">
+            <col />
+            <col />
+        </colgroup>
+        <thead>
+            <th>Name</th>
+            <th>Roll No.</th>
+            <th colspan="2">Edn (specialisation X degree)</th>
+        </thead>
+
+        <tbody>
+            <tr>
+                <td>Akruti Mishra</td>
+                <td>IPM05075</td>
+                <td>Finance</td>
+                <td>BBA</td>
+            </tr>
+            <tr>
+                <td>Ananya Jain</td>
+                <td>IPM05160</td>
+                <td>Marketing</td>
+                <td>BBA</td>
+            </tr>
+            <tr>
+                <td>Ananya Gautam</td>
+                <td>IPM05077</td>
+                <td>Marketing</td>
+                <td>BBA</td>
+            </tr>
+            <tr>
+                <td>Angel Sidhu</td>
+                <td>IPM05078</td>
+                <td>Finance</td>
+                <td>BBA</td>
+            </tr>
+            <tr></tr> 
+            <!-- to add an empty space -->
+        </tbody>
+        <tfoot>
+            <tr>
+                <td>Number of Students</td>
+                <td>4</td>
+            </tr>
+        </tfoot>
+    </table>
+    <br>
+    <small><small>Note: CSS stuff I don't understand. Refer youtube.</small></small>
+    <br><hr>
+    <h3>Forms</h3>
+    <article>
+        <section>
+            Forms let user input data<br>
+            Can be used to collect user data<br>
+        </section><br><br>
+        <section>
+            <b>Databases have 4 fundamental operations</b>(br>)
+            1. Create: new row is added<br>
+            2. Read: no modification<br>
+            3. Modify: existing row is modified, number of rows remains the same<br>
+            4. Delete: one row is deleted<br>
+            CRUD<br>
+        </section><br><br>
+        <section>
+            API: application programmer interface<br>
+            C = POST<br>
+            R = GET<br>
+            U = PUT<br>
+            D = DELETE<br>
+            these are called http verbs
+        </section><br><br>
+        <section>
+            Bootstrap: CSS framework for responsive things
+        </section>
+        <p>assigment - Forms can be HTTP but basic website has to be HTTPS. Github gives HTTPS</p>
+        
+    </article>
+</body>
+
+</html>
