--- a/index.html
+++ b/index.html
@@ -58,5 +58,9 @@
         </tfoot>
     </table>
 </body>
+<br><br>
+<footer>
+    <small><small>Akruti Mishra</small></small>
+</footer>
 
 </html>
