--- a/index.html
+++ b/index.html
@@ -8,55 +8,8 @@
 </head>
 
 <body>
-    <table>
-        <!-- how to add borders?? (its added in CSS ig)-->
-        <caption>Student Data</caption>
-        <col class="studentName" />
-        <colgroup id="studentColumns">
-            <col />
-            <col />
-        </colgroup>
-        <thead>
-            <th>Name</th>
-            <th>Roll No.</th>
-            <th colspan="2">Edn (specialisation X degree)</th>
-        </thead>
-
-        <tbody>
-            <tr>
-                <td>Akruti Mishra</td>
-                <td>IPM05075</td>
-                <td>Finance</td>
-                <td>BBA</td>
-            </tr>
-            <tr>
-                <td>Ananya Jain</td>
-                <td>IPM05160</td>
-                <td>Marketing</td>
-                <td>BBA</td>
-            </tr>
-            <tr>
-                <td>Ananya Gautam</td>
-                <td>IPM05077</td>
-                <td>Marketing</td>
-                <td>BBA</td>
-            </tr>
-            <tr>
-                <td>Angel Sidhu</td>
-                <td>IPM05078</td>
-                <td>Finance</td>
-                <td>BBA</td>
-            </tr>
-            <tr></tr> 
-            <!-- to add an empty space -->
-        </tbody>
-        <tfoot>
-            <tr>
-                <td>Number of Students</td>
-                <td>4</td>
-            </tr>
-        </tfoot>
-    </table>
+    <h1>Hello World!</h1>
+    <h6>Akruti Mishra</h6>
 </body>
 <br><br>
 <footer>
