--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
 
 <body>
     <h1>Hello World!</h1>
-    <h6>Akruti Mishra</h6>
-    <a href="Page 1.html">Page 1</a>
+    <h2><small>Akruti Mishra</small></h2>
+    <p><a href="Page 1.html">Page 1</a></p>
+    <ul><b>WIPs</b>
+    <li>
+        <a href=""> Curses of the Blessed</a>
+    </li></ul>
+      
 </body>
 <br><br>
-<footer>
-    <small><small>Akruti Mishra</small></small>
-</footer>
+
 
 </html>
