--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p><a href="Page 1.html">Page 1</a></p>
     <ul><b>WIPs</b>
     <li>
-        <a href="">Curses of the Blessed</a>
+        <a href="Curses of the Blessed.html">Curses of the Blessed</a>
     </li></ul>
       
 </body>
