--- a/Curses of the Blessed.html
+++ b/Curses of the Blessed.html
@@ -9,12 +9,12 @@
   <h1>Curses of the Blessed</h1>
   <ul><h2>Index</h2>
   <li>
-    <a name="Chapter 1">Chapter 1</a>
+    <a href="#section1">Chapter 1</a>
   </li>
   </ul>
   <hr>
   <article>
-    <section><h2 id="Chapter 1">Chapter 1</section>
+    <section id="section1"><h2>Chapter 1</section>
     <section>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
         sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
         Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
