--- a/Curses of the Blessed.html
+++ b/Curses of the Blessed.html
@@ -11,7 +11,11 @@
   <li>
     <a href="#section1">Chapter 1</a>
   </li>
+  <li>
+    <a href="#section2">Chapter 2</a>
+  </li>
   </ul>
+    <br><br><br><br><br><br><br><br>
   <hr>
   <article>
     <section id="section1"><h2>Chapter 1</section>
