Update Curses of the Blessed.html

--- a/Curses of the Blessed.html
+++ b/Curses of the Blessed.html
@@ -9,22 +9,33 @@
   <h1>Curses of the Blessed</h1>
   <ul><h2>Index</h2>
   <li>
-    <a href="#section1">Chapter 1</a>
+    <a href="#intro">IntroductionChapter 1</a>
   </li>
   <li>
-    <a href="#section2">Chapter 2</a>
+    <a href="#chapter1">Chapter 1</a>
+  </li>
+  <li>
+    <a href="#chapter2">Chapter 2</a>
   </li>
   </ul>
   <hr>
   <article>
-    <section id="section1"><h2>Chapter 1</section>
-    <section>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
-        ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
-        in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint 
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt m
-        ollit anim id est laborum.</section>
+    <section id="intro"><h2>Introduction</h2>
+    <p>Amisa knew she was prone to daydreaming and zoning off at inopportune times. It wasn’t unusual for her to get 
+        lost in her head dreaming up cute picnic dates for her ships or epic battle scenes or the perfect reply to 
+        arguments that she never got into or that one time when she totally embarrassed herself in front of her crush back in middle school… you get the idea.<br>
+But having vivid hallucinations about assassination attempts (that she knew hadn’t happened, come on, 
+        everyone knew The High Lady had been lost at sea) in the middle of her midterms seemed a bit much even for her.
+</p>
+    </section>
+    <section id="chapter1"><h2>Chapter 1
+    <p>“Seriously, how long is this gonna take?” whined Rashmi as Amisa dragged her through the bookshop aisles.</p>
+    <p>“Well, Arnaa Harrison just released a new book, and Ramon   suggested a book that’s apparently about Yananian myths. I haven’t found them yet though, so yes, its gonna take a while.” Amisa replied half-distracted as she read through the blurb of a thriller book. It wasn’t usually her taste, but this one sounded interesting.</p>
+        <p>Rashmi sighed. “You know what, I think I’ll get a coffee next door. You want anything?”</p>
+        <p>“Na, I’m good, I’ll meet you there in a while”</p>
+        <p>Lorem Ipsum</p>
+    
+    </section>
   </article>
 </body>
 </html>
