--- a/Curses of the Blessed.html
+++ b/Curses of the Blessed.html
@@ -28,7 +28,7 @@ But having vivid hallucinations about assassination attempts (that she knew hadn
         everyone knew The High Lady had been lost at sea) in the middle of her midterms seemed a bit much even for her.
 </p>
     </section>
-    <section id="chapter1"><h2>Chapter 1
+    <section id="chapter1"><h2>Chapter 1</h2>
     <p>“Seriously, how long is this gonna take?” whined Rashmi as Amisa dragged her through the bookshop aisles.</p>
     <p>“Well, Arnaa Harrison just released a new book, and Ramon   suggested a book that’s apparently about Yananian myths. I haven’t found them yet though, so yes, its gonna take a while.” Amisa replied half-distracted as she read through the blurb of a thriller book. It wasn’t usually her taste, but this one sounded interesting.</p>
         <p>Rashmi sighed. “You know what, I think I’ll get a coffee next door. You want anything?”</p>
