Update Curses of the Blessed.html

--- a/Curses of the Blessed.html
+++ b/Curses of the Blessed.html
@@ -9,7 +9,7 @@
   <h1>Curses of the Blessed</h1>
   <ul><h2>Index</h2>
   <li>
-    <a href="#intro">IntroductionChapter 1</a>
+    <a href="#intro">Introduction</a>
   </li>
   <li>
     <a href="#chapter1">Chapter 1</a>
